# glpi-isms-toolkit

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: assets.yml  business_rules.yml  categories.yml  company.yml  iso27001.yml  knowledge_base.yml  locations.yml  security.yml  sla.yml  templates.yml
config/examples/: factory.yml
docs/: configuration.md  getting-started.md  iso27001-mapping.md
gpo/: Set-GLPIAgentServer.ps1
src/glpi_toolkit/: __init__.py  cli.py
src/glpi_toolkit/branding/: __init__.py  generator.py  themes.py
src/glpi_toolkit/core/: __init__.py  config.py  constants.py  glpi_client.py
src/glpi_toolkit/iso27001/: __init__.py  controls.py  mapper.py
src/glpi_toolkit/reports/: __init__.py
src/glpi_toolkit/reports/pdf/: __init__.py  builder.py  components.py  styles.py
src/glpi_toolkit/reports/pdf/sections/: __init__.py  base.py  conclusion.py  configurations.py  cost.py  cover.py  executive.py  isms.py  iso27001.py
src/glpi_toolkit/reports/pptx/: __init__.py  builder.py  components.py  theme.py
templates/: strings_en.yml  strings_tr.yml
tests/: test_config.py  test_iso27001.py
